--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.85.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -16,6 +17,7 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
     "react": "19.2.0",
+    "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0"
   },
